k8s/demo-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-api-headless-svc
  namespace: api
spec:
  selector:
    app: node-demo-api
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
